sessão header completo

--- a/html/index.html
+++ b/html/index.html
@@ -15,33 +15,34 @@
         <div id="strip-top">
 
         </div>
+        <div id="strip-center">
+            <div class="logo-container">
+                <img src="" alt="">
+            </div>
 
-        <figure>
-            <img src="" alt="">
-        </figure>
-
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Home</a>
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Home</a>
-                            <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Home</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Home</a></li>
-            </ul>
-        </nav>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Home</a>
+                        <ul class="sub-menu">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Home</a>
+                                <ul class="sub-menu">
+                                    <li><a href="#">Home</a></li>
+                                    <li><a href="#">Home</a></li>
+                                    <li><a href="#">Home</a></li>
+                                    <li><a href="#">Home</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Home</a></li>
+                </ul>
+            </nav>
+        </div>
 
         <div class="slider-container">
             <div class="slides fade">
@@ -64,6 +65,22 @@
         </div>
         <br>
     </header>
+    <section>
+        <main>
+            <article>
+
+            </article>
+            <aside>
+                
+            </aside>
+        </main>
+            <article>
+
+            </article>
+    </section>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
