--- a/html/index.html
+++ b/html/index.html
@@ -4,82 +4,131 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>E-Comerce De livros</title>
+    <title>Valdecir ViagensNacionais</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='../css/style.min.css'>
-    <script defer src="../javascript/script.js"></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='../css/main.min.css'>
+    <link rel="icon" href="../recursos/imagens/logo/icon-logo-48.png">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+    <script defer src='../javascript/script.js'></script>
 </head>
 
 <body>
     <header>
         <div id="strip-top">
-
+            <i class="material-icons">flight_takeoff</i>
+            <span>                
+                (11) 94934-0360
+                ou 
+                (11) 94934-0360
+            </span>
         </div>
         <div id="strip-center">
             <div class="logo-container">
-                <img src="" alt="">
+                <img src="../recursos/imagens/logo/logo-header.png" alt="">
             </div>
 
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Home</a>
-                        <ul class="sub-menu">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Home</a>
-                                <ul class="sub-menu">
-                                    <li><a href="#">Home</a></li>
-                                    <li><a href="#">Home</a></li>
-                                    <li><a href="#">Home</a></li>
-                                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Empresa</a>
+                        <ul class="sub-menu-1">
+                            <li><a href="#">Sub-Item-01</a></li>
+                            <li><a href="#">Sub-Item-02</a></li>
+                            <li><a href="#">Sub-Item-03</a></li>
+                            <li><a href="#">Sub-Item-04</a>
+                                <ul class="sub-menu-2">
+                                    <li><a href="#">Sub-Item-01</a></li>
+                                    <li><a href="#">Sub-Item-02</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </li>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Clientes</a></li>
+                    <li><a href="#">Contato</a></li>
                 </ul>
             </nav>
         </div>
+        <div id="strip-down">
+            <div class="slideshow-container">
+                <div class="mySlides fade">
+                    <img src="../recursos/imagens/slides/1.jpg">
+                    <div class="text">Caption Text</div>
+                </div>
 
-        <div class="slider-container">
-            <div class="slides fade">
-                <img src="../recursos/imagens/1.jpg" style="width:100%">
-                <div class="text">Caption Text</div>
+                <div class="mySlides fade">
+                    <img src="../recursos/imagens/slides/9.jpg">
+                    <div class="text">Caption Two</div>
+                </div>
+
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
             </div>
-
-            <div class="slides fade">
-                <img src="../recursos/imagens/2.jpg" style="width:100%">
-                <div class="text">Caption Two</div>
-            </div>
-
-            <div class="slides fade">
-                <img src="../recursos/imagens/3.jpg" style="width:100%">
-                <div class="text">Caption Three</div>
-            </div>
-
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
-        <br>
+        </div>
     </header>
+
     <section>
         <main>
             <article>
+                <hgroup>
+                    <h2>Viagens Internacionais</h2>
+                    <h3>Conheça o Brasil</h3>
+                    <h4>Promoções validas ate <time>30 de julho de 2021</time> </h4>
 
+                </hgroup>
+                <div class="texto">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, iusto repudiandae est
+                        maiores recusandae et vero dolores facere eaque quo similique.</p>
+                    <p>Expedita ut doloribus voluptate laboriosam ratione aut velit non!</p>
+                    <p>Obrigado em boa viagem</p>
+                </div>
             </article>
             <aside>
-                
+                <img src="../recursos/imagens/main/agencia-de-viagem.jpg" alt="">
             </aside>
         </main>
-            <article>
+        <article id="destaques">
+            <h2>Destinos mais procurados</h2>
+            <div id="container-figures">
+                <figure>
+                    <img src="../recursos/imagens/imagens-destaque/imagem-destaque-bahia-salvador.jpg" alt="">
+                    <figcaption>
 
-            </article>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="../recursos/imagens/imagens-destaque/imagem-destaque-minas-ouro-preto.jpg" alt="">
+                    <figcaption>
+
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="../recursos/imagens/imagens-destaque/imagem-destaque-rio.jpg" alt="">
+                    <figcaption>
+
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="../recursos/imagens/imagens-destaque/imagem-destaque-saopaulo.jpg" alt="">
+                    <figcaption>
+
+                    </figcaption>
+                </figure>
+            </div>
+        </article>
     </section>
-    <footer>
 
+    <footer>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Empresa</a></li>
+                <li><a href="#">Clientes</a></li>
+                <li><a href="#">Contato</a></li>
+            </ul>
+        </nav>
+        <p>&copy; Todos os direitos reservados </p>
     </footer>
 </body>
 
